infra/k3s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhk-portal-front-app
  namespace: prod
  labels:
    app: fhk-portal-front-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fhk-portal-front-app
  template:
    metadata:
      labels:
        app: fhk-portal-front-app
    spec:
      containers:
        - name: fhk-portal-front-app
          image: juno6800/fhk-portal-front-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
