infra/k3s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhk-portal-front-app
  namespace: prod
  labels:
    app: fhk-portal-front-app
spec:
  type: ClusterIP
  selector:
    app: fhk-portal-front-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
