infra/k3s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fhk-portal-front-app-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.fhk-team.org
        - fhk-team.org
      secretName: fhk-team-org-tls
  rules:
    - host: www.fhk-team.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fhk-bff-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fhk-portal-front-app
                port:
                  number: 80
    - host: fhk-team.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fhk-bff-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fhk-portal-front-app
                port:
                  number: 80
